# iredis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: homebrew.yaml  release.yaml  test.yaml
docs/: update-commands-data.md
iredis/: __init__.py  bottom.py  browser.py  client.py  commands.py  completers.py  config.py  entry.py  key_bindings.py  lexer.py  markdown.py  processors.py  redis_grammar.py  renders.py  sentry.py  style.py  utils.py  warning.py
iredis/data/: command_syntax.csv  commands.json  iredisrc
iredis/data/commands/: hexpire.md  hexpireat.md  hexpiretime.md  hgetdel.md  hgetex.md  hpersist.md  hpexpire.md  hpexpireat.md  hpexpiretime.md  hpttl.md  hsetex.md  httl.md
scripts/: display_all_command_hints.py  download_redis_commands.py  release.sh  update_commands_json.py
tests/: conftest.py
tests/cli_tests/: test_browse.py  test_cli_start.py  test_command_input.py  test_completer.py  test_config.py  test_dsn.py  test_hash_field_ttl.py  test_history.py  test_on_error.py  test_pager.py  test_pattern_browse.py  test_transaction.py  wrappager.py
tests/unittests/: test_bottom.py  test_browser.py  test_client.py  test_completers.py  test_data_consistency.py  test_entry.py  test_key_bindings.py  test_markdown_doc_render.py  test_render_functions.py  test_sentry.py  test_style.py  test_utils.py
tests/unittests/command_parse/: test_hash_parse.py  test_iredis_parse.py
