[project]
name = "iredis"
version = "2.1.1"
description = "Terminal client for Redis with auto-completion and syntax highlighting."
authors = [{ name = "laixintao", email = "laixintao1995@163.com" }]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["Redis", "key-value store", "Commandline tools", "Redis Client"]
classifiers = [
    # see https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: MacOS X",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Intended Audience :: Developers",
]
dependencies = [
    # >=3.0.29 for prompt_toolkit.cursor_shapes (vi mode modal cursor)
    "prompt-toolkit>=3.0.29,<4",
    "pygments>=2,<3",
    "mistune>=3.0,<4",
    "configobj>=5.0,<6",
    "click>=8.0,<9",
    "redis>=5.0.0,<9.0.0",
    "packaging>=24.2",
    "python-dateutil>=2.8.2,<3",
]

[project.urls]
Homepage = "https://github.com/laixintao/iredis"
Repository = "https://github.com/laixintao/iredis"

[project.scripts]
iredis = "iredis.entry:main"

[dependency-groups]
dev = [
    "freezegun>=1.4.0",
    "pytest>=8.0",
    "pexpect>=4.7",
    "pyte>=0.8",
    "pre-commit>=4.0",
    "ruff>=0.14",
    "ty>=0.0.1a21",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# flat layout: the iredis package lives at the repository root
module-root = ""

[tool.ruff]
extend-exclude = ["redis-doc"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "UP"]

[tool.ty.src]
exclude = ["tests", "scripts"]
